trunk/Archive2/6f/fac5c61e8bd965/main.cpp
int main()
{
    const int *x;
    int const * y;
    int * const z;
    int const * const p;
    x = 0;
    *x = 0;
    y = 0;
    *y = 0;
    z = 0;
    *z = 0;
    p = 0;
    *p = 0;
    return 0;
}
